# StompEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Project.xml  ProjectOptions.cmake  README.md  build.sh  fresh_build.sh  run.sh  run_tests.sh
Application/: CMakeLists.txt  main.cpp
CMake/: Cache.cmake  CompilerWarnings.cmake  Tests.cmake
Engine/: CMakeLists.txt  main.cpp  totest.h
Engine/CoreModule/: CMakeLists.txt
Engine/CoreModule/src/Containers/: Vector.h
Engine/CoreModule/src/Core/: Defines.h
Engine/CoreModule/src/Log/: Logs.cpp  Logs.h  totest.cpp
Engine/CoreModule/src/Text/: String.h
Engine/CoreModule/tests/: LogsTest.cpp
Engine/LogModule/: CMakeLists.txt
Engine/LogModule/src/: totest.cpp  totest.h
Engine/LogModule/tests/: LogModuleTest.cpp
